Fixed abilities overflowing

--- a/components/general/PokemonCard/style.module.scss
+++ b/components/general/PokemonCard/style.module.scss
@@ -41,6 +41,10 @@
 .abilities{
   display: flex;
   justify-content: center;
+  //max-height: 65px;
+  overflow-y: hidden;
+  white-space: nowrap;
+  //overflow: hidden;
   &_title{
     display: flex;
     justify-content: center;
